--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "0.0.19-alpha",
+    "@ministryofjustice/frontend": "^0.0.19-alpha",
     "accessible-autocomplete": "^2.0.3",
     "acorn": "^8.5.0",
     "ansi-colors": "^4.1.1",
@@ -39,7 +39,7 @@
     "lodash": "^4.17.21",
     "marked": "^3.0.8",
     "moment": "^2.29.1",
-    "multer": "^1.4.2",
+    "multer": "^1.4.4",
     "node-sass": "^6.0.1",
     "notifications-node-client": "^5.1.0",
     "nunjucks": "^3.2.1",
