--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "gulp-nodemon": "^2.5.0",
     "gulp-sass": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
+    "highlight.js": "^11.4.0",
     "inquirer": "^8.2.0",
     "lodash": "^4.17.21",
     "marked": "^3.0.8",
