--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "test": "npm run lint && gulp generate-assets && jest"
   },
   "dependencies": {
-    "@ministryofjustice/frontend": "^0.0.19-alpha",
+    "@ministryofjustice/frontend": "0.2.1",
     "accessible-autocomplete": "^2.0.3",
     "acorn": "^8.5.0",
     "ansi-colors": "^4.1.1",
