--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "scripts": {
+    "dev": "govuk-prototype-kit dev",
+    "serve": "govuk-prototype-kit serve",
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
     "govuk-frontend": "^4.3.1",
-    "govuk-prototype-kit": "^0.0.1-beta.1",
+    "govuk-prototype-kit": "^0.0.1-beta.3",
     "moment": "^2.29.1"
   }
 }
