--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
+    "@ministryofjustice/frontend": "^1.6.2",
     "govuk-frontend": "^4.3.1",
     "govuk-prototype-kit": "^0.0.1-beta.3",
+    "jquery": "^3.6.1",
     "moment": "^2.29.1"
   }
 }
