--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
+    "@govuk-prototype-kit/step-by-step": "^2.1.0",
     "@ministryofjustice/frontend": "^1.6.2",
     "govuk-frontend": "^4.4.0",
     "govuk-prototype-kit": "^13.0.0",
