S78 LPAQ, adding the appeal started / questionnaire email and the enter code steps

--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
     "start": "govuk-prototype-kit start"
   },
   "dependencies": {
+    "@govuk-prototype-kit/common-templates": "1.2.2",
     "@govuk-prototype-kit/step-by-step": "^2.1.0",
+    "@govuk-prototype-kit/task-list": "1.1.2",
     "@ministryofjustice/frontend": "^1.6.2",
     "govuk-frontend": "^4.4.0",
-    "govuk-prototype-kit": "^13.0.0",
+    "govuk-prototype-kit": "^13.13.3",
+    "hmrc-frontend": "5.48.0",
     "jquery": "^3.6.1",
     "moment": "^2.29.1",
     "radio-button-redirect": "^1.2.0"
