--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@govuk-prototype-kit/step-by-step": "^2.1.0",
     "@govuk-prototype-kit/task-list": "1.1.2",
     "@ministryofjustice/frontend": "^1.6.2",
+    "@x-govuk/govuk-prototype-filters": "^1.2.0",
     "govuk-frontend": "^4.4.0",
     "govuk-prototype-kit": "^13.13.3",
     "hmrc-frontend": "5.48.0",
