appeals as data

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "govuk-frontend": "^5.0.0",
     "govuk-prototype-kit": "^13.16.0",
     "hmrc-frontend": "6.0.0",
+    "home-office-kit": "^1.2.0",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
     "radio-button-redirect": "^1.2.0"
