--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@x-govuk/govuk-prototype-components": "^5.0.2",
     "@x-govuk/govuk-prototype-filters": "^1.3.0",
     "govuk-frontend": "^5.12.0",
-    "govuk-prototype-kit": "^13.16.0",
-    "hmrc-frontend": "6.0.0",
+    "govuk-prototype-kit": "13.18.1",
+    "hmrc-frontend": "^6.0.0",
     "home-office-kit": "^1.2.0",
     "jquery": "^3.7.1",
     "moment": "^2.30.1",
