--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@ministryofjustice/frontend": "^2.0.0",
     "@x-govuk/govuk-prototype-components": "^5.0.2",
     "@x-govuk/govuk-prototype-filters": "^1.3.0",
+    "connect-flash": "^0.1.1",
     "govuk-frontend": "^5.12.0",
     "govuk-prototype-kit": "13.18.1",
     "hmrc-frontend": "^6.0.0",
